--- a/fitnessclub/package.json
+++ b/fitnessclub/package.json
@@ -11,19 +11,23 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
-    "@types/qrcode": "^1.5.5",
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^4.1.0",
     "flutterwave-react-v3": "^1.3.2",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.344.0",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.1",
